implement Adapter, RecyclerView , fetch Data from API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MyFavoritesMovies</string>
     <string name="menu_sort">Sort By</string>
+    <string name="movie_poster">Movie poster</string>
 </resources>
