--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyFavoritesMovies</string>
-    <string name="menu_sort">Sort By</string>
+    <string name="menu_popular_movies">Popular Movies</string>
+    <string name="menu_top_rated_movies">Top Rated Movies</string>
     <string name="movie_poster">Movie poster</string>
 </resources>
