update code before submission to review

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="movie_poster">Movie poster</string>
     <!-- Shared Element Name-->
     <string name="poster_transition">posterShared</string>
+    <string name="movie_release">Release </string>
     <string name="movie_title">Title</string>
-    <string name="movie_release_date">Release date</string>
+    <string name="movie_title_original">Original title </string>
+    <string name="movie_vote">Vote </string>
+    <string name="movie_synopsis">Synopsis</string>
 </resources>
