--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="movie_synopsis">Synopsis</string>
     <string name="movie_trailers">Trailers</string>
     <string name="trailer_for_movie">Trailer for movie</string>
+    <string name="movie_reviews">Reviews</string>
+    <string name="author_name">By %1$s</string>
+    <string name="trailer_name">Trailer %1$d</string>
 </resources>
